# insomniapp

./: .gitignore  README.md  RELEASE_CHEATSHEET.txt  docker-compose.yml  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
frontend/desktop/: package-lock.json  package.json
frontend/desktop/src/: App.tsx  main.tsx  types.ts
frontend/desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/desktop/src-tauri/capabilities/: default.json
frontend/desktop/src-tauri/src/: commands.rs  disguise.rs  idle.rs  keepawake.rs  lib.rs  meeting.rs  state.rs  tray.rs
frontend/desktop/src-tauri/src/disguise/: enumerate.rs  mod.rs
frontend/desktop/src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
frontend/desktop/src/components/: DisguiseWindow.tsx  Icons.tsx  SettingsForm.tsx  StatusPanel.tsx
frontend/desktop/src/contexts/: ThemeContext.tsx
frontend/desktop/src/hooks/: useDisguiseState.ts  useUpdateCheck.ts
frontend/web/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/web/src/: App.tsx  index.css
frontend/web/src/components/: FeatureCard.tsx  Navbar.tsx  SectionHeading.tsx
frontend/web/src/sections/: Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  (+1 more)
scripts/: release.ps1  release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: keepawake.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/platform/: mod.rs
src/components/: IdleTimer.tsx  MeetingIndicator.tsx  SettingsForm.tsx
src/hooks/: useAppState.ts
