[package]
name = "insomniapp"
version = "0.4.1"
description = "Keep your computer awake"
authors = ["you"]
edition = "2021"

[lib]
name = "insomniapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "sync"] }
log = "0.4"
enigo = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
] }
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
coreaudio-sys = "0.2"
